--- a/skabelon.html
+++ b/skabelon.html
@@ -148,19 +148,7 @@ $(document).ready(function(){
 </script>
 <script type="text/javascript">
 var bogdata=new Array();
-//
-bogdata["9788770534215"]="Viceadmiral Carl Hamilton får kommandoen over en palæstinensisk superubåd leveret af Rusland med planer om et angreb på den israelske havneby Haifa";
-bogdata["9788702091250"]="";
-bogdata["9788702048971"]="Den karrierebevidste journalist Therese Skårup har født en datter, og befinder sig pludselig i lejligheden i København helt uforberedt på moderskabets uoverskuelige kaos af følelser og instinkter";
-bogdata["9788764450293"]="18 korte noveller om familielivet i Danmark med drama mellem og bag linjerne. Om magt og afmagt, om had og kærlighed og om følelser og konflikter mellem enkelte familiemedlemmer livet igennem";
-bogdata["9788776976637"]="En munter opsang til kvinder, der vakler mellem kirurgi og terapi for at håndtere alderdomstegnene, men først og fremmest om at respekt fra omverdenen fås kun, hvis man respekterer sig selv";
-bogdata["9788702051186"]="Med to vidt forskellige tvillinger som eksponenter for forfatteren fortælles og filosoferes over den moderne videnskab sat over for en tidsløshedens dimension - fra fortidens Japan til fremtidens Nordsjælland";
-bogdata["9788770899048"]="Krimi med udgangspunkt i Shakespeares skuepil Macbeth, Skotlands historie og masser af magi, mord og mysterier";
-bogdata["9788762502529"]="Historisk gennemgang af den danske livsfilosofi og dens forhold til pædagogik med en kritisk analyse af den pædagogiske livsfilosofi som rejser spørgsmålet om hvorvidt denne egner sig til den danske folkeskole";
-bogdata["9788702093179"]="Krimi. En tilfældig opdagelse af et mordoffer gør Karen Borg til forsvarer for en hollandsk narkoman. Han er dødsens bange - ikke uden grund - for bagmændene har forbindelse højt oppe i samfundet";
-bogdata["9788770894920"]="Gavins liv ændrer sig slående, da han, der er ualmindelig sky og venneløs, møder den mystiske Joan og den tossede Minerva: han frigør sig fra forældrene og flytter hjemmefra";
-bogdata["9788779558755"]="Krimi. Da en ung mand, der er tortureret ihjel, viser sig at være søn af Big Ger Rafferty, og at der er tråde til den nordirske konflikt, er John Rebus under mere end normalt pres";
-
+//##SCRIPT##
 </script>    
 </head>
 
@@ -172,19 +160,7 @@ bogdata["9788779558755"]="Krimi. Da en ung mand, der er tortureret ihjel, viser 
 	<h1>Spot en ebog</h1>
 </div>
 <div id="imageribbon" class="imageflow">
-
-<img src="http://digiformspot.etek.dk/billeder/isbn9788770534215.jpg" longdesc="9788770534215" width="320" height="516" alt="Madame Terror" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788702091250.jpg" longdesc="9788702091250" width="320" height="435" alt="Spiderwick fortællingerne" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788702048971.jpg" longdesc="9788702048971" width="320" height="542" alt="Det virkelige liv" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788764450293.jpg" longdesc="9788764450293" width="320" height="441" alt="Nu er vi så her" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788776976637.jpg" longdesc="9788776976637" width="320" height="499" alt="Vi bliver ikke yngre - fat det!" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788702051186.jpg" longdesc="9788702051186" width="320" height="506" alt="Kejserens atlas" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788770899048.jpg" longdesc="9788770899048" width="320" height="493" alt="Shakespeare forbandelsen" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788762502529.jpg" longdesc="9788762502529" width="320" height="465" alt="Livets pædagogik en kritik af livsfilosofien og dens pædagogisering" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788702093179.jpg" longdesc="9788702093179" width="320" height="320" alt="Blind gudinde" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788770894920.jpg" longdesc="9788770894920" width="320" height="444" alt="På den rette måde" />
-<img src="http://digiformspot.etek.dk/billeder/isbn9788779558755.jpg" longdesc="9788779558755" width="320" height="463" alt="Døden har en årsag" />
-
+##IMAGES##
 </div>
 <div class="footer">
 <h1>Footer</h1>
