--- a/index.html
+++ b/index.html
@@ -214,16 +214,15 @@ bogdata["9788779558755"]="Krimi. Da en ung mand, der er tortureret ihjel, viser 
 <div id="bookdata">IMAGE TITEL DESCRIPTION erstattes dynamisk af relevant indhold</div>
 
 <div id="myform">
-<form autocomplete="off" method="post">
-<fieldset>
-<legend>Send link hjem</legend>
-<p class="desc">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser<br></p>
-<p class="desc" style="margin:4px;">Indtast din e-mail adresse</p> <input type="text" id="e" class="myinput" name="param2"/><br />
-<p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
-</fieldset>
-<input id="isbn" type="hidden" value="" name="param3"/>
-<input id="titel" type="hidden" value="" name="param4"/>
-</form> 
+  <form class="myform" autocomplete="off" method="post">
+    <div class="form-email" style="margin:4px;position:absolute;bottom:10px;text-align:right;">
+      <p class="desc">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser<br></p>
+      <p class="desc" style="text-align:left;">Indtast din e-mail adresse</p> <input class="myinput form-email-felt" type="text" id="e" name="param2"/>
+      <p class="submit" class="myform"><input class="green-button" type="submit" value="Send mig en email" /></p>
+    </div
+  <input id="isbn" type="hidden" value="" name="param3"/>
+  <input id="titel" type="hidden" value="" name="param4"/>
+  </form> 
 </div>
 <div id="result"> </div>
 </div>
