popup og imageflow

--- a/index.html
+++ b/index.html
@@ -30,26 +30,19 @@
       </div>
       <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" /></div>
       <div id="slider-arrow-right" class="slider-arrow-right"><img src="images/arrow-right.png" /></div>
-  
       <div id="main">
-        <a id="inline" href="#popup"></a>
-        <div class="header"><h1>Spot en ebog</h1></div>
         <div id="imageribbon" class="imageflow"></div>
-        <div class="footer"><h1>Footer</h1></div>
       </div>
     </div>
 
-<div style="display:none">
-
-  <div id="popup">
-
+<div style="display:none;">
+  <div id="popup" class="popup-form">
     <div id="bookdata">IMAGE TITEL DESCRIPTION erstattes dynamisk af relevant indhold</div>
-
     <div id="myform">
       <form class="myform" autocomplete="off" method="post">
         <div class="form-email">
           <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser<br></p>
-          <p class="desc email-text">Indtast din e-mail adresse</p> <input class="myinput form-email-felt" type="text" id="e" name="param1"/>
+          <p class="email-text tiny">Indtast din e-mail adresse</p> <input class="myinput form-email-felt" type="text" id="e" name="param1"/>
           <p class="submit" class="myform"><input class="green-button" type="submit" value="Send mig en email" /></p>
         </div>
       <input id="type" type="hidden" value="" name="param2"/>  
@@ -59,8 +52,8 @@
     </div>
     <div id="result"> </div>
   </div>
-
 </div>
+<a id="inline" href="#popup"></a>
 
 </body>
 </html>
