--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="wrapper">
       <div class="body-header">
         <div class="logo"></div>
-        <div class="slogan">&nbsp;</div>
+        <div class="slogan"><h1>Få tilsendt e-bøger og lydbøger helt gratis - tryk på bøgerne!</h1></div>
       </div>
       <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" /></div>
       <div id="slider-arrow-right" class="slider-arrow-right"><img src="images/arrow-right.png" /></div>
