--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="keyboard/danish.js" charset="utf-8"></script>      
   <script src="bookdata.js" ></script>  
   
+<!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
   <link href="styles/styles.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="scripts/scripts.js"></script>
 </head>
