--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link href="keyboard/keyboard.css" rel="stylesheet">
 	<script src="keyboard/jquery.keyboard.js"></script>
 	<script src="keyboard/danish.js" charset="utf-8"></script>      
-  <script src="bookdata.js" ></script>  
+  <script src="http://images.spot.ereolen.dk/bookdata.js" ></script>  
   
 <!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
   <link href="styles/styles.css" rel="stylesheet" type="text/css">
