--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-    <title>Netlydbøger</title>
+    <title>eReolen</title>
 
     <script type="text/javascript" src="library/jquery-1.6.4.min.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.1.1.1.js"></script>
