--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   
 <!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
   <link href="styles/styles.css" rel="stylesheet" type="text/css">
-  <link href="styles/plugin-override.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="scripts/scripts.js"></script>
+  <link href="styles/plugin-override.css" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="scripts/plugin-override.js"></script>
 </head>
 
 <body>
