--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="da" lang="da" dir="ltr">
 	<head>
-		<meta charset="utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>eReolen</title>
 
     <script type="text/javascript" src="library/jquery-1.6.4.min.js"></script>
@@ -13,15 +14,15 @@
 
 	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-	<link href="keyboard/keyboard.css" rel="stylesheet">
+	<link href="keyboard/keyboard.css" rel="stylesheet" />
 	<script src="keyboard/jquery.keyboard.js"></script>
 	<script src="keyboard/danish.js" charset="utf-8"></script>      
   <script src="http://images.spot.ereolen.dk/bookdata.js" ></script>  
   
 <!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
-  <link href="styles/styles.css" rel="stylesheet" type="text/css">
+  <link href="styles/styles.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="scripts/scripts.js"></script>
-  <link href="styles/plugin-override.css" rel="stylesheet" type="text/css">
+  <link href="styles/plugin-override.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="scripts/plugin-override.js"></script>
 </head>
 
