--- a/index.html
+++ b/index.html
@@ -5,25 +5,23 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>eReolen</title>
 
-    <script type="text/javascript" src="library/jquery-1.6.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="library/jquery-1.6.4.min.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.1.1.1.js"></script>
-		<link rel="stylesheet" href="imageflow/imageflow.packed.css" type="text/css" />
-		<script type="text/javascript" src="imageflow/imageflow.packed.js"></script>
+    <script type="text/javascript" src="imageflow/imageflow.packed.js"></script>
     <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.1.pack.js"></script>
+  	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="keyboard/jquery.keyboard.js"></script>
+    <script type="text/javascript" src="keyboard/danish.js" charset="utf-8"></script>      
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/bookdata.js"></script>  
+    <script type="text/javascript" src="scripts/scripts.js"></script>
+    <script type="text/javascript" src="scripts/plugin-override.js"></script>
+    <link rel="stylesheet" href="imageflow/imageflow.packed.css" type="text/css" />
     <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.1.css" type="text/css" media="screen" />
-
-	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-	<link href="keyboard/keyboard.css" rel="stylesheet" />
-	<script src="keyboard/jquery.keyboard.js" type="text/javascript"></script>
-	<script src="keyboard/danish.js" charset="utf-8" type="text/javascript"></script>      
-  <script src="http://images.spot.ereolen.dk/bookdata.js" type="text/javascript"></script>  
-  
-<!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
-  <link href="styles/styles.css" rel="stylesheet" type="text/css" />
-  <script type="text/javascript" src="scripts/scripts.js"></script>
-  <link href="styles/plugin-override.css" rel="stylesheet" type="text/css" />
-  <script type="text/javascript" src="scripts/plugin-override.js"></script>
+  	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link href="keyboard/keyboard.css" rel="stylesheet" type="text/css" />
+    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <link href="styles/plugin-override.css" rel="stylesheet" type="text/css" />
+    <!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
 </head>
 
 <body>
