Fixed html and cleaned up

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="slogan"><h1>Få tilsendt e-bøger og lydbøger helt gratis - tryk på bøgerne!</h1></div>
       </div>
       <div id="main">      
-        <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" /></div>
-        <div id="slider-arrow-right" class="slider-arrow-right"><img src="images/arrow-right.png" /></div>
+        <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" alt="" /></div>
+        <div id="slider-arrow-right" class="slider-arrow-right"><img src="images/arrow-right.png" alt="" /></div>
         <div id="imageribbon" class="imageflow"></div>
       </div>
     </div>
@@ -44,8 +44,9 @@
       <div id="myform">
         <form class="myform" autocomplete="off" method="post">
           <div class="form-email">
-            <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser<br></p>
-            <p class="email-text tiny">Indtast din e-mail adresse</p> <input class="myinput form-email-felt" type="text" id="e" name="param1"/>
+            <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser</p>
+            <p class="email-text tiny">Indtast din e-mail adresse</p>
+            <input class="myinput form-email-felt" type="text" id="e" name="param1" />
             <p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
           </div>
         <input id="type" type="hidden" value="" name="param2"/>  
