--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="wrapper">
       <div class="body-header">
         <div class="logo"></div>
-        <div class="slogan"><h1>Få tilsendt e-bøger og lydbøger helt gratis - tryk på bøgerne!</h1></div>
+        <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
       </div>
       <div id="main">      
         <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" alt="" /></div>
