--- a/indexv2.html
+++ b/indexv2.html
@@ -9,8 +9,8 @@
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.1.1.1.js"></script>
 
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/bookdata.js"></script>  
     <script type="text/javascript" src="http://images.spot.ereolen.dk/menudata.js"></script>  
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/bookdatafull.js"></script>  
 
     <script type="text/javascript" src="imageflow/imageflow.packed.js"></script>
     <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.1.pack.js"></script>
