--- a/indexv2.html
+++ b/indexv2.html
@@ -4,32 +4,24 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>eReolen</title>
-    
-    <script src="http://code.jquery.com/jquery-1.6.4.js"></script>
+
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.1.1.1.js"></script>
 
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/menudata.js"></script>  
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/bookdatafull.js"></script>  
+    <script type="text/javascript" src="data/menudata.js"></script>
+    <script type="text/javascript" src="data/bookdata.js"></script>
 
     <script type="text/javascript" src="imageflow/imageflow.packed.js"></script>
-    <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.1.pack.js"></script>
-
-<!--       
-    <script type="text/javascript" src="keyboard/jquery.keyboard.js"></script>
-    <script type="text/javascript" src="keyboard/danish.js" charset="utf-8"></script>      
-    <script type="text/javascript" src="scripts/keyboard_local.js"></script>
-    <link href="keyboard/keyboard.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
-  
--->    
+    <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
     <script type="text/javascript" src="scripts/scripts2013.js"></script>
-    
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" />
-    <link rel="stylesheet" href="imageflow/imageflow.packed.css" type="text/css" />
-    <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.1.css" type="text/css" media="screen" />
 
-    <link href="styles/styles2013.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
+    <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
+    <link rel="stylesheet" href="imageflow/imageflow.packed.css" type="text/css" />
+    <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
+    <link rel="stylesheet" href="styles/styles2013.css" type="text/css" />
 
 </head>
 
@@ -40,7 +32,7 @@
         <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
       </div>
       <div id="menucontainer"></div>
-      <div id="main">      
+      <div id="main">
         <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" alt="" /></div>
         <div id="slider-arrow-right" class="slider-arrow-right"><img src="images/arrow-right.png" alt="" /></div>
         <div id="imageribbon" class="imageflow"></div>
@@ -54,17 +46,17 @@
       <div id="myform">
         <form class="myform" autocomplete="off" method="post">
           <div class="form-email">
-            <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser</p>
+            <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png"> for at vise et tastatur.</p>
             <p class="email-text tiny">Indtast din e-mail adresse</p>
-            <input class="myinput form-email-felt" type="text" id="e" name="param1" />
+            <input id="email" class="form-email-felt" type="text"  name="param1" />
             <p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
           </div>
         <input id="type" type="hidden" value="" name="param2" />
         <input id="isbn" type="hidden" value="" name="param3" />
         <input id="titel" type="hidden" value="" name="param4" />
-        </form> 
+        </form>
       </div>
-      <div id="result"></div>      
+      <div id="result"></div>
     </div>
   </div>
 </div>
