--- a/indexv3.html
+++ b/indexv3.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="imageflow/imageflow.packed.js"></script>
     <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
     <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
-    <script type="text/javascript" src="scripts/scripts2013.js"></script>
+    <script type="text/javascript" src="scripts/scripts2013v3.js"></script>
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
