use external bookdata again

--- a/indexv2.html
+++ b/indexv2.html
@@ -9,8 +9,8 @@
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.min.js"></script>
 
-    <script type="text/javascript" src="data/menudata.js"></script>
-    <script type="text/javascript" src="data/bookdata.js"></script>
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/menudata.js"></script>
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/bookdata.js"></script>
 
     <script type="text/javascript" src="imageflow/imageflow.packed.js"></script>
     <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
