--- a/indexv3.html
+++ b/indexv3.html
@@ -29,7 +29,7 @@
     <div class="wrapper">
       <div class="body-header">
         <div class="logo"></div>
-        <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - <a href="#" id="testnext">tryk på bøgerne!</a></h1></div>
+        <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
       </div>
       <div id="menucontainer"></div>
       <div id="main">
