--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.1.pack.js"></script>
   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <script type="text/javascript" src="keyboard/jquery.keyboard.js"></script>
-    <script type="text/javascript" src="keyboard/danish.js" charset="utf-8"></script>      
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/bookdata.js"></script>  
+    <script type="text/javascript" src="keyboard/danish.js" charset="utf-8"></script>
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/bookdata.js"></script>
     <script type="text/javascript" src="scripts/scripts.js"></script>
     <script type="text/javascript" src="scripts/plugin-override.js"></script>
     <link rel="stylesheet" href="imageflow/imageflow.packed.css" type="text/css" />
@@ -22,6 +22,9 @@
     <link href="styles/styles.css" rel="stylesheet" type="text/css" />
     <link href="styles/plugin-override.css" rel="stylesheet" type="text/css" />
     <!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
+    <script type="text/javascript">
+    var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26676691-2']); _gaq.push (['_gat._anonymizeIp']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
+    </script>
 </head>
 
 <body>
@@ -30,7 +33,7 @@
         <div class="logo"></div>
         <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
       </div>
-      <div id="main">      
+      <div id="main">
         <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" alt="" /></div>
         <div id="slider-arrow-right" class="slider-arrow-right"><img src="images/arrow-right.png" alt="" /></div>
         <div id="imageribbon" class="imageflow"></div>
@@ -52,9 +55,9 @@
         <input id="type" type="hidden" value="" name="param2" />
         <input id="isbn" type="hidden" value="" name="param3" />
         <input id="titel" type="hidden" value="" name="param4" />
-        </form> 
+        </form>
       </div>
-      <div id="result"></div>      
+      <div id="result"></div>
     </div>
   </div>
 </div>
