--- a/indexv2.html
+++ b/indexv2.html
@@ -22,7 +22,9 @@
     <link rel="stylesheet" href="imageflow/imageflow.packed.css" type="text/css" />
     <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
     <link rel="stylesheet" href="styles/styles2013.css" type="text/css" />
-
+    <script type="text/javascript">
+    var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26676691-2']); _gaq.push (['_gat._anonymizeIp']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
+    </script>
 </head>
 
 <body>
