--- a/indexv3.html
+++ b/indexv3.html
@@ -33,12 +33,13 @@
       <div class="body-header">
         <div class="logo"></div>
         <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
+
       </div>
       <div id="menucontainer"></div>
-      <div id="main">
-        <div id="imagecontainer"><div class="jcarousel"></div></div>
-        <div class="slider-arrow-left"><a class="jcarousel-prev" href="#"><img src="images/arrow-left.png" alt="" /></a></div>
-        <div class="slider-arrow-right"><a class="jcarousel-next" href="#"><img src="images/arrow-right.png" alt="" /></a></div>
+      <div id="imagecontainer">
+	    <div class="jcarousel"></div>
+        <div class="slider-arrow-left"><a class="jcarousel-prev" href="#"><img src="http://spot.ereolen.dk/images/arrow-left.png" alt="" /></a></div>
+        <div class="slider-arrow-right"><a class="jcarousel-next" href="#"><img src="http://spot.ereolen.dk/images/arrow-right.png" alt="" /></a></div>
       </div>
     </div>
 
