--- a/indexv3.html
+++ b/indexv3.html
@@ -1,28 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="da" lang="da" dir="ltr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>eReolen</title>
 
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
+    <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
+    <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
+    <link rel="stylesheet" href="styles/styles2013v3.css" type="text/css" />
+	
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.min.js"></script>
     <script type="text/javascript" src="library/jquery.jcarousel.min.js"></script>
+    <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
 
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/menudata.js"></script>
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/bookdata.js"></script>
-
-
-    <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
-    <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
     <script type="text/javascript" src="scripts/scripts2013v3.js"></script>
 
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
-    <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
-
-    <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
-    <link rel="stylesheet" href="styles/styles2013v3.css" type="text/css" />
     <script type="text/javascript">
     var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26676691-2']); _gaq.push (['_gat._anonymizeIp']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
     </script>
