--- a/index_old.html
+++ b/index_old.html
@@ -5,23 +5,23 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>eReolen</title>
 
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="library/jquery.touchwipe.min.js"></script>
-
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/menudata.js"></script>
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/bookdata.js"></script>
-
+    <script type="text/javascript" src="library/jquery-1.6.4.min.js"></script>
+    <script type="text/javascript" src="library/jquery.touchwipe.1.1.1.js"></script>
     <script type="text/javascript" src="imageflow/imageflow.packed.js"></script>
-    <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
-    <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
-    <script type="text/javascript" src="scripts/scripts2013.js"></script>
-
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
-    <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
+    <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.1.pack.js"></script>
+  	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="keyboard/jquery.keyboard.js"></script>
+    <script type="text/javascript" src="keyboard/danish.js" charset="utf-8"></script>
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/bookdata.js"></script>
+    <script type="text/javascript" src="scripts/scripts.js"></script>
+    <script type="text/javascript" src="scripts/plugin-override.js"></script>
     <link rel="stylesheet" href="imageflow/imageflow.packed.css" type="text/css" />
-    <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
-    <link rel="stylesheet" href="styles/styles2013.css" type="text/css" />
+    <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.1.css" type="text/css" media="screen" />
+  	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link href="keyboard/keyboard.css" rel="stylesheet" type="text/css" />
+    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <link href="styles/plugin-override.css" rel="stylesheet" type="text/css" />
+    <!--  <link href="styles/styles-low.css" media="(min-width: 600px)" rel="stylesheet" type="text/css"> -->
     <script type="text/javascript">
     var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26676691-2']); _gaq.push (['_gat._anonymizeIp']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
     </script>
@@ -33,11 +33,10 @@
         <div class="logo"></div>
         <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
       </div>
-      <div id="menucontainer"></div>
       <div id="main">
         <div id="slider-arrow-left" class="slider-arrow-left"><img src="images/arrow-left.png" alt="" /></div>
         <div id="slider-arrow-right" class="slider-arrow-right"><img src="images/arrow-right.png" alt="" /></div>
-        <div id="imagecontainer" class="imageflow"></div>
+        <div id="imageribbon" class="imageflow"></div>
       </div>
     </div>
 
@@ -48,9 +47,9 @@
       <div id="myform">
         <form class="myform" autocomplete="off" method="post">
           <div class="form-email">
-            <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png"> for at vise et tastatur.</p>
+            <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser</p>
             <p class="email-text tiny">Indtast din e-mail adresse</p>
-            <input id="email" class="form-email-felt" type="text"  name="param1" />
+            <input class="myinput form-email-felt" type="text" id="e" name="param1" />
             <p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
           </div>
         <input id="type" type="hidden" value="" name="param2" />
