--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="da" lang="da" dir="ltr">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>eReolen</title>
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
     <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
     <link rel="stylesheet" href="styles/styles2013v3.css" type="text/css" />
-	
+
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.min.js"></script>
@@ -30,13 +30,12 @@
       <div class="body-header">
         <div class="logo"></div>
         <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
-
       </div>
       <div id="menucontainer"></div>
       <div id="imagecontainer">
-	    <div class="jcarousel"></div>
-        <div class="slider-arrow-left"><a class="jcarousel-prev" href="#"><img src="http://spot.ereolen.dk/images/arrow-left.png" alt="" /></a></div>
-        <div class="slider-arrow-right"><a class="jcarousel-next" href="#"><img src="http://spot.ereolen.dk/images/arrow-right.png" alt="" /></a></div>
+        <div class="imagebanner"></div>
+        <div class="imagebanner-left"><img src="images/arrow-left.png" alt="" /></div>
+        <div class="imagebanner-right"><img src="images/arrow-right.png" alt="" /></div>
       </div>
     </div>
 
