cleanup old versions

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>eReolen</title>
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
-    <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
     <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
-    <link rel="stylesheet" href="styles/styles2013v3.css" type="text/css" />
+    <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
+    <link rel="stylesheet" href="library/styles2013v3.css" type="text/css" />
 
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.min.js"></script>
     <script type="text/javascript" src="library/jquery.jcarousel.min.js"></script>
     <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
@@ -18,7 +18,7 @@
 
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/menudata.js"></script>
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/bookdata.js"></script>
-    <script type="text/javascript" src="scripts/scripts2013v3.js"></script>
+    <script type="text/javascript" src="library/scripts2013v3.js"></script>
 
     <script type="text/javascript">
     var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26676691-2']); _gaq.push (['_gat._anonymizeIp']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
