--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
     </div>
 
 <div style="display:none;">
-  <div id="popup" class="popup-form">
-    <div class="popup-wrapper">
+  <div id="popup">
       <div id="bookdata">IMAGE TITEL DESCRIPTION erstattes dynamisk af relevant indhold</div>
       <div id="myform">
-        <form class="myform" autocomplete="off" method="post">
+        <form autocomplete="off" method="post">
           <div class="form-email">
-            <p class="desc email-text">Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png"> for at vise et tastatur.</p>
-            <p class="email-text tiny">Indtast din e-mail adresse</p>
+            <p>Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png"> for at vise et tastatur.</p>
+            <p>Indtast din e-mail adresse</p>
             <input id="email" class="form-email-felt" type="text"  name="param1" />
             <p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
           </div>
@@ -56,8 +55,7 @@
         <input id="titel" type="hidden" value="" name="param4" />
         </form>
       </div>
-      <div id="result"></div>
-    </div>
+      <div id="message"></div>
   </div>
 </div>
 <a id="inline" href="#popup"></a>
