--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div id="myform">
         <form autocomplete="off" method="post">
           <div class="form-email">
-            <p>Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png"> for at vise et tastatur.</p>
+            <p>Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png" alt="" /> for at vise et tastatur.</p>
             <p>Indtast din e-mail adresse</p>
             <input id="email" class="form-email-felt" type="text"  name="param1" />
             <p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
