--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
     <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
-    <link rel="stylesheet" href="library/styles2013v3.css" type="text/css" />
+    <link rel="stylesheet" href="library/styles.css" type="text/css" />
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
@@ -18,7 +18,7 @@
 
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/menudata.js"></script>
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/bookdata.js"></script>
-    <script type="text/javascript" src="library/scripts2013v3.js"></script>
+    <script type="text/javascript" src="library/scripts.js"></script>
 
     <script type="text/javascript">
     var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26676691-2']); _gaq.push (['_gat._anonymizeIp']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
@@ -26,39 +26,38 @@
 </head>
 
 <body>
-    <div class="wrapper">
-      <div class="body-header">
-        <div class="logo"></div>
-        <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
-      </div>
-      <div id="menucontainer"></div>
-      <div id="imagecontainer">
-        <div class="imagebanner"></div>
-        <div class="imagebanner-left"><img src="images/arrow-left.png" alt="" /></div>
-        <div class="imagebanner-right"><img src="images/arrow-right.png" alt="" /></div>
-      </div>
-    </div>
+<div class="wrapper">
+  <div class="body-header">
+    <div class="logo"></div>
+    <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
+  </div>
+  <div id="menucontainer"></div>
+  <div id="imagecontainer">
+    <div class="imagebanner"></div>
+    <div class="imagebanner-left"><img src="images/arrow-left.png" alt="" /></div>
+    <div class="imagebanner-right"><img src="images/arrow-right.png" alt="" /></div>
+  </div>
+</div>
 
 <div style="display:none;">
   <div id="popup">
-      <div id="bookdata">IMAGE TITEL DESCRIPTION erstattes dynamisk af relevant indhold</div>
-      <div id="myform">
-        <form autocomplete="off" method="post">
-          <div class="form-email">
-            <p>Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png" alt="" /> for at vise et tastatur.</p>
-            <p>Indtast din e-mail adresse</p>
-            <input id="email" class="form-email-felt" type="text"  name="param1" />
-            <p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
-          </div>
+    <div id="bookdata">IMAGE TITEL DESCRIPTION erstattes dynamisk af relevant indhold</div>
+    <div id="myform">
+      <form autocomplete="off" method="post">
+        <div class="form-email">
+          <p>Udfyld feltet nedenfor og tryk på knappen så modtager du en e-mail med flere instrukser. Klik på <img class="keyimg" src="images/keyboard.png" alt="" /> for at vise et tastatur.</p>
+          <p>Indtast din e-mail adresse</p>
+          <input id="email" class="form-email-felt" type="text"  name="param1" />
+          <p class="submit"><input class="green-button" type="submit" value="Send mig en email" /></p>
+        </div>
         <input id="type" type="hidden" value="" name="param2" />
         <input id="isbn" type="hidden" value="" name="param3" />
         <input id="titel" type="hidden" value="" name="param4" />
-        </form>
-      </div>
-      <div id="message"></div>
+      </form>
+    </div>
+    <div id="message"></div>
   </div>
 </div>
 <a id="inline" href="#popup"></a>
-
 </body>
 </html>
