use of one js: spotdata.js

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
     <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
 
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/menudata.js"></script>
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/bookdata.js"></script>
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/spotdata.js"></script>
     <script type="text/javascript" src="library/scripts.js"></script>
 
     <script type="text/javascript">
