--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <div id="menucontainer"></div>
   <div id="imagecontainer">
     <div class="imagebanner"></div>
-    <div class="imagebanner-left"><img src="images/arrow-left.png" alt="" /></div>
-    <div class="imagebanner-right"><img src="images/arrow-right.png" alt="" /></div>
+    <div class="imagebanner-left"><img class="navbutton" src="images/arrow-left.png" alt="" /></div>
+    <div class="imagebanner-right"><img class="navbutton" src="images/arrow-right.png" alt="" /></div>
   </div>
 </div>
 
