Use new spotdata.js

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
     <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
 
-    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/spotdata.js"></script>
-    <script type="text/javascript" src="library/scripts.js"></script>
+    <script type="text/javascript" src="http://images.spot.ereolen.dk/data/spotdatav2.js"></script>
+    <script type="text/javascript" src="library/scriptsv2.js"></script>
 
     <script type="text/javascript">
     var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26676691-2']); _gaq.push (['_gat._anonymizeIp']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
