--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="wrapper">
   <div class="body-header">
     <div class="logo"></div>
-    <div class="slogan"><h1>Få tilsendt e-bøger helt gratis - tryk på bøgerne!</h1></div>
+    <div class="slogan"><h1>Tryk på forsiderne og send ebøger hjem!</h1></div>
   </div>
   <div id="menucontainer"></div>
   <div id="imagecontainer">
