Update fancybox to 2.1.5

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>eReolen</title>
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
-    <link rel="stylesheet" href="fancybox-2.1.4/jquery.fancybox.css" type="text/css" />
+    <link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" />
     <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
     <link rel="stylesheet" href="library/styles.css" type="text/css" />
 
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="library/jquery.touchwipe.min.js"></script>
     <script type="text/javascript" src="library/jquery.jcarousel.min.js"></script>
-    <script type="text/javascript" src="fancybox-2.1.4/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
     <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
 
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/spotdatav2.js"></script>
