update keyboard to 1.17.16

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/ui-darkness/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" />
-    <link rel="stylesheet" href="keyboard-1.17.1/keyboard.css" type="text/css" />
+    <link rel="stylesheet" href="keyboard/keyboard.css" type="text/css" />
     <link rel="stylesheet" href="library/styles.css" type="text/css" />
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="library/jquery.touchwipe.min.js"></script>
     <script type="text/javascript" src="library/jquery.jcarousel.min.js"></script>
     <script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
-    <script type="text/javascript" src="keyboard-1.17.1/jquery.keyboard.min.js"></script>
+    <script type="text/javascript" src="keyboard/jquery.keyboard.min.js"></script>
 
     <script type="text/javascript" src="http://images.spot.ereolen.dk/data/spotdatav2.js"></script>
     <script type="text/javascript" src="library/scriptsv2.js"></script>
